Email description for staff - edit

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -170,8 +170,8 @@
                 <label>Send Email to Patient</label>
                 <select  id="profileEmailSelect" class="form-control bd-element">
                     <option value="">Select e-mail..</option>
-                    <option value="invite">Registration Invitation for ePROMs</option>
-                    <option value="reminder">Registration Reminder for ePROMs</option>
+                    <option value="invite">ePROMs Invitation</option>
+                    <option value="reminder">ePROMs Reminder</option>
                 </select>
                 <button id="btnProfileSendEmail" class="btn btn-default btn-sm disabled">Send Email</button>
                 <div id="profileEmailMessage" class="text-info"></div>
