--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -23,8 +23,8 @@
                 <div id="wellContent">
 
                     <div class="headline">
-                        <div style="margin-bottom: 1em">Welcome to TrueNTH</div>
-                        Tools for navigating the prostate cancer journey
+                        <div style="margin-bottom: 1em">{{ app_text('landing title') }}</div>
+                        {{ app_text('landing sub-title') }}
                     </div>
                     <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
 
