--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -47,7 +47,7 @@
         <div class="modal-content">
           <div class="modal-header" style="background-color:#79815D; color: #FFF">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Truenth EPROMs Registration</h4>
+            <h4 class="modal-title" id="myModalLabel">{{ app_text('portal registration') }}</h4>
           </div>
           <div class="modal-body" style="font-size:0.8em">
             <br/>
