--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -170,8 +170,8 @@
                 <label>Send Email to Patient</label>
                 <select  id="profileEmailSelect" class="form-control bd-element">
                     <option value="">Select e-mail..</option>
-                    <option value="invite">ePROMs Invitation</option>
-                    <option value="reminder">ePROMs Reminder</option>
+                    <option value="invite">{{ app_text('profileSendEmail option invite') }}</option>
+                    <option value="reminder">{{ app_text('profileSendEmail option reminder') }}</option>
                 </select>
                 <button id="btnProfileSendEmail" class="btn btn-default btn-sm disabled">Send Email</button>
                 <div id="profileEmailMessage" class="text-info"></div>
@@ -218,8 +218,8 @@
                     var url = getUrl();
                     if (url != '') {
 
-                        var body = 
-'<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html><body><p>Hello,</p><p>This message is an invitation to contribute data to the ePROMs system.</p><table><tr><td align="center" width="300" bgcolor="#0088cc" style="background: #0088cc; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; color: #fff; font-weight: bold; text-decoration: none; padding: 6px; font-family: Helvetica, Arial, sans-serif; display: block;"><a href="' + url + '" style="color: #fff; text-decoration: none; display: block; font-size: 16px; width: 300px">Visit ePROMs</a></td></tr></table><p>Click on the button above or this link to visit ePROMs and complete your questionnaire:<br /><a href="' + url + '">' + url + '</a></p><p><em>&mdash; An automatic reminder from the ePROMs system</em></p></body></html>';
+                        var body = {{ app_text('profileSendEmail email html',
+                                url) | safe }};
 
                         $.ajax ({
                             type: 'POST',
