--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -339,12 +339,14 @@
 {% macro profileSessionList(person) -%}
     <!--hard coded for now -->
     <hr/>
-    <div class="form-group profile-section" id="userSessionsList">
-        <label>Session History</label>
+    <div class="form-group profile-section well" id="userSessionsList">
+        <label>PRO Assessments</label>
+        <button id="assessPatient" class="btn btn-lg btn-tnth-primary">Assess this patient for the EPIC-26</button>
         <table class="tnth-admin-table table table-hover table-condensed table-striped table-bordered small-text">
+            <caption>Session History</caption>
             <th>Project Name</th><th>State</th><th>Last Activity</th><th>Session ID</th>
             <tr>
-                <td><a href="{{ url_for('patients.sessionReport', user_id=person.id) }}">Truenth Epic 26 Questinnaire</a></td><td>finished</td><td>9:48AM Tue Sep 27, 2016</td><td>1</td>
+                <td><a href="{{ url_for('patients.sessionReport', user_id=person.id) }}">EPIC-26 Questionnaire</a></td><td>finished</td><td>9:48AM Tue Sep 27, 2016</td><td>1</td>
             </tr>
         </table>
     </div>
