--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -399,13 +399,26 @@ a:hover, a:active {
   }
 }
 
+
+.profile-name-label {
+  margin-bottom: 2px
+}
+
+#userEthnicity label {
+  margin-bottom: 0  
+}
+
+#userRace label {
+  margin-bottom: 0
+}
+
+
 #userOrgs {
  font-size:@orgSize;
  label :first-of-type  {
     margin-bottom: 0.5em;
  }
 }
-
 
 #fillOrgs legend {
   font-size:@legendSize;
@@ -416,11 +429,13 @@ a:hover, a:active {
   font-size: @orgSize;
 }
 
-#profileCreateForm  .title {
-  margin-top: 5%;
-}
 input.clinic {
   margin-top:6px;
+}
+
+
+#profileCreateForm  .title {
+  margin-top: 5%;
 }
 
 #profileSendEmailContainer {
@@ -450,6 +465,10 @@ input.clinic {
 
 #userSessionsList {
   font-size: @sessionListSize;
+}
+
+#userSessionsList label {
+  margin-bottom: 6px;
 }
 
 #userAssessementReport table {
