patient profile email button finesse

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -174,7 +174,7 @@
                     <option value="invite">{{ app_text('profileSendEmail option invite') }}</option>
                     <option value="reminder">{{ app_text('profileSendEmail option reminder') }}</option>
                 </select>
-                <button id="btnProfileSendEmail" class="btn btn-default btn-sm disabled">Send Email</button>
+                <button id="btnProfileSendEmail" class="btn btn-lg btn-tnth-primary disabled">Send Email</button>
                 <div id="profileEmailMessage" class="text-info"></div>
             </form>
         </div>
