--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -358,6 +358,19 @@ a:active {
   top: -24px;
   left: 0;
 }
+.profile-item-container {
+  background-color: #EFF5F3;
+  padding: 1.5em 2em;
+  border-radius: 8px;
+  margin: 0.5em auto;
+  border: 1px solid #E0E6E3;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.profile-item-title {
+  color: #575F5C;
+  margin-bottom: 18px;
+}
 .profile-name-label {
   margin-bottom: 2px;
 }
@@ -427,6 +440,8 @@ input.clinic {
 }
 .profile-section {
   margin-bottom: 1.5em;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .name-section {
   margin-bottom: 1.2em;
@@ -458,6 +473,17 @@ input.clinic {
   -moz-opacity: 0.4;
   -khtml-opacity: 0.4;
   opacity: 0.4;
+}
+.side {
+  height: 25em;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.flex div {
+  margin: 0.5em 1em 0.5em 0.5em;
 }
 .pagination > .active > a {
   background-color: #79815D;
@@ -515,6 +541,23 @@ input.clinic {
     margin-bottom: 0;
   }
 }
+@media (max-width: 730) {
+  #userSessionsList {
+    font-size: 0.9em;
+  }
+}
+@media (max-width: 630px) {
+  body,
+  .form-control,
+  input,
+  select,
+  h4 {
+    font-size: 13px;
+  }
+  #userSessionsList {
+    font-size: 0.85em;
+  }
+}
 @media (min-width: 768px) {
   #mainNav {
     height: 135px;
@@ -559,10 +602,10 @@ input.clinic {
     font-size: 1.8em;
   }
   .tnth-headline {
-    font-size: 1.5em;
+    font-size: 1.35em;
   }
   .tnth-subhead {
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
   #fullSizeContainer {
     padding: 30px 0;
@@ -583,7 +626,7 @@ input.clinic {
     margin-bottom: 1em;
   }
   .tnth-splash .headline {
-    font-size: 1.5em;
+    font-size: 1.35em;
   }
   .pos-bottom-md {
     position: absolute;
