--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -49,7 +49,7 @@
 
         <div class="container{% if splashView %}-fluid{% endif %}">
             <div class="row">
-                <div class="col-xs-12 {% if not wideContainer %}col-lg-10 col-lg-offset-1{% endif %}">
+                <div class="col-xs-12 {% if not wideContainer %}col-lg-12{% endif %}">
                     {% block main %}
                     {% endblock %}
                 </div>
