--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -34,7 +34,7 @@
     <table id="adminTable{{orgCount}}"
            data-table-id="{{orgCount}}"
            class="tnth-admin-table"
-           data-classes="table table-hover table-condensed table-striped"
+           data-classes="table table-hover table-condensed table-striped table-responsive"
            data-toggle="table"
            data-sort-name="userid"
            data-sort-order="desc"
