--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -400,7 +400,8 @@ a:hover, a:active {
 }
 
 .profile-item-container {
-  background-color: #EFF5F3;
+  /*background-color: #EFF5F3;*/
+  background-color: rgba(173, 193, 197, 0.14);
   padding: 1.5em 2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -462,7 +463,7 @@ input.clinic {
 }
 
 .create-account-container {
-  padding: 2.5em 3.5em
+  padding: 3em 5em
 }
 
 #btnProfileSendEmail {
